# NEWT

./: LICENSE  README.md  environment-dev.yml  environment.yml  pyproject.toml  requirements-dev.txt  setup.cfg
data/: L1000_PhaseI_and_II.csv  WHO_ATC_DDD_2024-07-31.csv  cellnet_filtered_entrez_embeddings.csv  collectri_embeddings_entrez_embeddings.csv  cpd_gene_pairs.csv  dorothea_embeddings_entrez_embeddings.csv  gene_to_go_top.csv  gene_vec_archs4_256.csv  gene_vec_go_256.csv  learned_gene_embeddings_go_graph.csv  msigdb_bundle_embeddings_entrez.csv  term2gene_id.csv
newt/: __init__.py  _utils.py  cli.py
newt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
newt/scripts/: classifier_improved_fusion_v13_collectri_dorothea_no_strict.py  export_graphml_ATC_subnetworks_v5_shRNA.py  gene_vec_model_cellnet_tf_network.py  gene_vec_model_collectri_network.py  gene_vec_model_dorothea_network.py  gene_vec_model_msigdB_bundle.py  l1000_model_v5_merged_embeddings_v8_collectri_fixed.py  plot_tsne_combos_v3.py  recall_improved_shRNA_merged_metrics_cell_line_v8.py  scanpy_clustering_v16c.py  utils.py
newt/scripts/old/: recall_improved_shRNA_merged_metrics_cell_line_v8.py  scanpy_clustering_v16c.py  scanpy_clustering_v16c.py_old  scanpy_clustering_v16c.py_old2
